# klipper-led_effect

./: .devcontainer.json  install-led_effect.sh
.github/workflows/: build_pages.yaml  rebase-main-ontop-upstream-develop.yaml  rebase-upstream-develop-ontop-upstream.yaml  test.yaml  update_previews.yaml
docs/: LED_Effect.md
simulator/: pyproject.toml
