[tool.poetry]
name = "simulator"
version = "0.1.0"
description = ""
authors = ["Julian Schill <j.schill@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
wxPython = ">=4.2.5"
pyinstaller = ">6.4.0"
numpy = ">2"

[tool.poetry.group.dev.dependencies]
black = {version = ">=26.3.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
